# SOLANA

./: .gitignore
nft/: Cargo.toml  metadata.json  mint.json  wallet.json
nft/src/: config.rs  main.rs
nft/src/nft/: ata.rs  metadata.rs  mint.rs  mod.rs  token.rs  utils.rs
sol_nft/: Cargo.toml
sol_nft/src/: main.rs
sol_nft/src/constants/: config.rs
sol_nft/src/metadata/: create_metadata.rs  mod.rs
sol_nft/src/mint/: create_nft.rs  mod.rs
sol_nft/src/wallet/: load_wallet.rs  mod.rs
sol_swap/: Cargo.toml
sol_swap/frontend/: index.html
sol_swap/frontend/src/: App.css  App.jsx  index.css
sol_swap/frontend/src/components/: Hero.jsx  LiquidityCard.jsx  Navbar.jsx  PoolOverview.jsx  SwapCard.jsx  TransactionTable.jsx  WalletCard.jsx
sol_swap/frontend/src/context/: SolanaContext.jsx
sol_swap/src/: main.rs
sol_swap/src/utils/: mod.rs  pool.rs  state.rs  swap.rs  token.rs  wallet.rs
solana_wallet/: Cargo.toml
solana_wallet/src/: main.rs
soldex/: ARCHITECTURE.md  Anchor.toml  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md
soldex/frontend/: .env  .env.example  vite.config.ts
soldex/frontend/src/: App.tsx  index.css  main.tsx
soldex/frontend/src/config/: index.ts
soldex/frontend/src/hooks/: useLiquidity.ts  usePool.ts  useSwap.ts  useTokens.ts  useWallet.ts
soldex/frontend/src/pages/: AboutPage.tsx  AnalyticsPage.tsx  DevToolsPage.tsx  LiquidityPage.tsx  NotFoundPage.tsx  SwapPage.tsx
soldex/frontend/src/stores/: usePoolStore.ts  useTokenStore.ts
soldex/programs/soldex/: Cargo.toml
soldex/tests/: soldex.ts
(+34 files in other folders)
