[package]
name = "nft"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "2.1.0"
solana-client = "2.1.0"

spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"

mpl-token-metadata = "5.1.0"

tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"