[package]
name = "sol_swap"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "2.3.1"
solana-client = "2.3.13"

spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }

anyhow = "1.0"

bs58 = "0.5"

